--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "g-robotics",
+  "name": "be-inspired",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,12 +9,37 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.4",
+    "@fortawesome/fontawesome": "^1.2.0-6",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-pro": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/pro-duotone-svg-icons": "^5.15.4",
+    "@fortawesome/pro-light-svg-icons": "^5.15.4",
+    "@fortawesome/pro-regular-svg-icons": "^5.15.4",
+    "@fortawesome/pro-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.2",
+    "cookie": "^0.4.1",
+    "next": "^11.1.2",
+    "nextjs-breadcrumbs": "^1.1.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-bootstrap": "^2.0.0-beta.4",
+    "react-dom": "17.0.2",
+    "react-gtm-module": "^2.0.11",
+    "react-responsive": "^9.0.0-beta.4",
+    "react-router-dom": "^5.2.1",
+    "react-slick": "^0.28.1",
+    "react-typing-effect": "^2.0.5",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "11.1.0"
   }
 }
