--- a/package.json
+++ b/package.json
@@ -24,16 +24,20 @@
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "cookie": "^0.4.1",
+    "framer-motion": "^5.4.1",
+    "gsap": "^3.8.0",
     "next": "^11.1.2",
     "nextjs-breadcrumbs": "^1.1.9",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
+    "react-intersection-observer": "^8.32.5",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.2.1",
     "react-slick": "^0.28.1",
     "react-typing-effect": "^2.0.5",
+    "react-use": "^17.3.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0"
   },
