--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-intersection-observer": "^8.32.5",
+    "react-rellax": "^1.0.3",
     "react-responsive": "^9.0.0-beta.4",
     "react-router-dom": "^5.2.1",
     "react-slick": "^0.28.1",
