--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nextjs-breadcrumbs": "^1.1.9",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
+    "react-calendly": "^2.2.2",
     "react-dom": "17.0.2",
     "react-gtm-module": "^2.0.11",
     "react-intersection-observer": "^8.32.5",
