--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-slick": "^0.28.1",
     "react-typing-effect": "^2.0.5",
     "react-use": "^17.3.1",
+    "sitemap": "^7.1.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0"
   },
