--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.2.7",
     "babel-plugin-styled-components": "^1.13.2",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0"
