--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "postbuild": "next-sitemap",
     "lint": "next lint"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "framer-motion": "^5.4.1",
     "gsap": "^3.8.0",
     "next": "^11.1.2",
+    "next-sitemap": "^2.5.20",
     "nextjs-breadcrumbs": "^1.1.9",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
@@ -40,7 +42,6 @@
     "react-slick": "^0.28.1",
     "react-typing-effect": "^2.0.5",
     "react-use": "^17.3.1",
-    "sitemap": "^7.1.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.0"
   },
