--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudflare/stream-react": "^1.8.0",
     "@fortawesome/fontawesome": "^1.2.0-6",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@fortawesome/fontawesome-pro": "^5.15.4",
