remove fontawesome library

--- a/package.json
+++ b/package.json
@@ -7,22 +7,16 @@
     "build": "next build",
     "start": "next start",
     "postbuild": "next-sitemap",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "ANALYZE=true next build"
   },
   "dependencies": {
     "@cloudflare/stream-react": "^1.8.0",
-    "@fortawesome/fontawesome": "^1.2.0-6",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@fortawesome/fontawesome-pro": "^5.15.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-brands-svg-icons": "^5.15.4",
-    "@fortawesome/pro-duotone-svg-icons": "^5.15.4",
-    "@fortawesome/pro-light-svg-icons": "^5.15.4",
-    "@fortawesome/pro-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@next/bundle-analyzer": "^12.1.5",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
     "cookie": "^0.4.1",
+    "cross-env": "^7.0.3",
     "framer-motion": "^5.4.1",
     "next": "^11.1.2",
     "next-sitemap": "^2.5.20",
